--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,15 @@ idna==2.7
 Jinja2==2.10
 Markdown==2.6.11
 MarkupSafe==1.0
+matrix-client==0.3.2
 pycparser==2.18
 Pygments==2.2.0
 pygments-markdown-lexer==0.1.0.dev39
 pyOpenSSL==18.0.0
+python-http-client==3.1.0
 requests==2.20.1
 rocket-errbot==1.2.5
+sendgrid==5.6.0
 six==1.11.0
 typing==3.6.4
 urllib3==1.23
@@ -28,4 +31,4 @@ waitress==1.1.0
 WebOb==1.8.2
 WebTest==2.0.30
 Yapsy==1.11.223
-zulip==0.5.2
+zulip==0.5.7
