--- a/requirements.txt
+++ b/requirements.txt
@@ -12,23 +12,33 @@ dnspython==1.15.0
 dnspython3==1.15.0
 errbot==5.2.0
 idna==2.7
+importlib-metadata==0.8
 Jinja2==2.10
+lexrank==0.1.0
 Markdown==2.6.11
 MarkupSafe==1.0
 matrix-client==0.3.2
+numpy==1.16.0
+path.py==11.5.0
 pycparser==2.18
 Pygments==2.2.0
 pygments-markdown-lexer==0.1.0.dev39
 pyOpenSSL==18.0.0
+pyrsistent==0.14.9
 python-http-client==3.1.0
+regex==2018.11.22
 requests==2.20.1
 rocket-errbot==1.2.5
+scipy==1.2.0
 sendgrid==5.6.0
 six==1.11.0
 typing==3.6.4
+uritools==2.2.0
+urlextract==0.8.3
 urllib3==1.23
 waitress==1.1.0
 WebOb==1.8.2
 WebTest==2.0.30
 Yapsy==1.11.223
+zipp==0.3.3
 zulip==0.5.7
