--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,47 @@
 ansi==0.1.3
-asn1crypto==0.24.0
-beautifulsoup4==4.6.3
-bottle==0.12.13
-certifi==2018.8.13
-cffi==1.11.5
+appdirs==1.4.3
+beautifulsoup4==4.8.2
+CacheControl==0.12.6
+certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
-colorlog==3.1.4
-cryptography==2.3.1
-daemonize==2.4.7
-dnspython==1.15.0
-dnspython3==1.15.0
-errbot==5.2.0
-idna==2.7
-importlib-metadata==0.8
-Jinja2==2.10
-lexrank==0.1.0
+click==7.1.1
+colorama==0.4.3
+colorlog==4.1.0
+contextlib2==0.6.0
+cryptography==2.8
+daemonize==2.5.0
+distlib==0.3.0
+distro==1.4.0
+dulwich==0.19.15
+errbot==6.1.2
+Flask==1.1.1
+html5lib==1.0.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.11.1
+lockfile==0.12.2
 Markdown==2.6.11
-MarkupSafe==1.0
+MarkupSafe==1.1.1
 matrix-client==0.3.2
-numpy==1.16.0
-path.py==11.5.0
-pycparser==2.18
-Pygments==2.2.0
+msgpack==0.6.2
+packaging==20.1
+pep517==0.7.0
+progress==1.5
+pycparser==2.20
+Pygments==2.6.1
 pygments-markdown-lexer==0.1.0.dev39
-pyOpenSSL==18.0.0
-pyrsistent==0.14.9
-python-http-client==3.1.0
-regex==2018.11.22
-requests==2.20.1
-rocket-errbot==1.2.5
-scipy==1.2.0
-sendgrid==5.6.0
-six==1.11.0
-typing==3.6.4
-uritools==2.2.0
-urlextract==0.8.3
-urllib3==1.24.2
-waitress==1.4.2
-WebOb==1.8.2
-WebTest==2.0.30
-Yapsy==1.11.223
-zipp==0.3.3
-zulip==0.5.7
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pytoml==0.1.21
+requests==2.22.0
+retrying==1.3.3
+six==1.14.0
+soupsieve==2.0
+urllib3==1.25.8
+waitress==1.4.3
+webencodings==0.5.1
+WebOb==1.8.6
+WebTest==2.0.34
+Werkzeug==1.0.0
+zulip==0.6.4
